INCLUDE(../../../../include/config.txt)

SET(LIBNAME InputDVDVideo)
SET(LIBRARY_OUTPUT_PATH ../../../../lib/)

SET(rm " /bin/rm -f")
SET(CC " ${MYCC}")
SET(LINK " -=LINK=-")
SET(DEFS )
SET(AR " ${MYAR} cq")
SET(RANLIB " ${MYRANLIB}")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../Include")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../common/IPC/include")
SET(INCLUDES  ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../common/IPC/generate/include/system")

SET(DEFINES ${DEFINES} " ${DEFS} -DSYS_UNIX=1")
SET(CFLAGS " ${DEFINES} ${COMPILE_OPT}")
SET(LIBS )


IF(USE_IOCACHE STREQUAL YES)
SET(DEFINES ${DEFINES} " -DUSE_IOCACHE=1")
ENDIF(USE_IOCACHE STREQUAL YES)



IF(USE_VOB_CACHE_DATA STREQUAL YES)
SET(DEFINES ${DEFINES} " -DVOB_CACHE_DATA=1")
ENDIF(USE_VOB_CACHE_DATA STREQUAL YES)

IF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)
SET(LIBNAME ../../../../lib/InputDVDVideo.so)
SET(CFLAGS ${CFLAGS} " -fPIC -D__NAV_USE_DLL_PLUGIN__")
SET(LIB_DIRS $(LIB_DIRS) " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../lib")
SET(LIBS $(LIBS) " DVDCommon")
SET(LIBS $(LIBS) " ebase")
SET(LIBS $(LIBS) " dvdaccess")
SET(LIBS $(LIBS) " OSAL")
SET(LIBS $(LIBS) " udfaccess")
SET(LIBS $(LIBS) " CSS")
ELSE(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)
#SET(LIBNAME ../../../../lib/libInputDVDVideo.a)
ENDIF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)

SET(CFLAGS ${CFLAGS} " -DRECOVERY_JUMP_LEVEL=${RECOVERY_JUMP_LEVEL}")
SET(SRCS CDVDVideoCmdHandler.cpp CDVDVideoVM.cpp NavRead.cpp CDVDVideoNav.cpp ifoHelpers.cpp)
SET(OBJS CDVDVideoCmdHandler.o CDVDVideoVM.o NavRead.o CDVDVideoNav.o ifoHelpers.o)
IF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)
ELSE(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)
ENDIF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)

INCLUDE_DIRECTORIES(${INCLUDES})
ADD_DEFINITIONS(${CFLAGS} ${DEBUGFLAG} ${WARNING})
ADD_LIBRARY(${LIBNAME} ${SRCS})
string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
